--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet"> 
-    <title>My Web Page</title>
+    <title>My Web Page new </title>
 </head>
 <body>
     <%- include('header.ejs') %>
