--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
             <a class='text-red-600' href="/">Home Page Link</a>
-            <h6 class="py-6">Sign Up as a new User</h6>
+            <h6 class="text-blue-600">Sign Up as a new User</h6>
             <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <div class="py-3">
