--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="<%= csrfToken %>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/style.css" rel="stylesheet"> 
-    <title>Document</title>
+    <link href="./css/styles.css" rel="stylesheet"> 
+    <title>MY Document</title>
     <script>
         var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");
         function updateTodo(id)
@@ -53,6 +53,9 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
+            <h1><%= "Hey , " + user.firstName + " " + user.lastName %></h1>
+            <a class='text-red-600' href="/">Home Page Link</a>
+        
             <a href="/signout">signout</a>
             <form action="/todos" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
@@ -67,7 +70,7 @@
                 
                 
                     <div class="flex-none">
-                        <button type="submit" class="bg-green-500 text-white px-5 py-2 rounded font-medium mr-2 py1.5">Add</button>
+                        <button type="submit" class="bg-green-500 text-white px-5 py-2 rounded font-medium mr-2 py1.5">Add </button>
                     </div>
                 </div>
                 
