update user name

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -53,7 +53,7 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-            <h1><%= "Hey , " + user.firstName + " " + user.lastName %></h1>
+            <h1><%= "Hey, I am " + user.firstName + " " + user.lastName %></h1>
             <a class='text-red-600' href="/">Home Page Link</a>
         
             <a href="/signout">signout</a>
