--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,1 @@
-<h1 class="text-lg font-semibold text-blue-800"> My Application Todo</h1>
+<h1 class="text-lg font-semibold text-blue-800">Online Voting Application</h1>
