--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,6 @@
-<h1>
-    This Application developed by Mr.Rakesh Kumar    
+<h1 class="text-lg font-semibold text-blue-200">
+
+    
+    This Application  Developed by Mr.Rakesh Kumar
+    
   </h1>
