--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -84,9 +84,10 @@
                 <%- include('todo.ejs', {title: "Completed Items", data: completed_Items}) %>
             </div>
            
-            
-            <!-- <%- include('footer.ejs') %> -->
+            <%- include('footer.ejs') %> 
+           
         </div>
+      
     </div>
     
 </body>
