--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2">
         <%- include('header.ejs') %>
-        <p class="py-2">WELCOME To The To-do Manager</p>
+        <p class="py-2">voting web application</p>
         <p class="py-2">Are you Using First Time? <a href="/signup" class="text-blue-800">Sign-up instant</a></p>
         <p class="py-2">Do you already have an account? <a href="/login" class="text-blue-800">Sign-in instant</a></p>
       </div>
