--- a/views/Mainpage.ejs
+++ b/views/Mainpage.ejs
@@ -26,16 +26,16 @@
                 </div> 
 
 
-                <form action="/ele_add" method="post" class="border-2">
+                <form action="/Add_Election" method="post" class="border-2">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                     <div class="py-3">
-                        <label for="ele_Name">voter Name:</label>
+                        <label for="ele_Name">Add Election Name:</label>
                         <input type="text" name="ele_Name" 
                         class="border border-yellow-700 text-yellow-900 rounded py-3 w-full">
                     </div>
                    
                     <div class="py-3">
-                        <button type="submit" class="text-white bg-red-700 hover:bg-red-900 font-medium rounded px-5 py-2">Add New Election</button>
+                        <button type="submit" class="text-white bg-blue-700 hover:bg-blue-900 font-medium rounded px-2 py-2">Submit Election Name</button>
                     </div>
                 </form>
             </div>
