--- a/views/Mainpage.ejs
+++ b/views/Mainpage.ejs
@@ -43,7 +43,7 @@
         </div>  
         
            
-         
+        <%- include('count_elections.ejs') %>
         </div>
     </body>
     
