add questions list elections

--- a/views/count_elections.ejs
+++ b/views/count_elections.ejs
@@ -17,9 +17,9 @@
                 <td class="border-2 border-rose-600 font-bold">S.No.</td>
                 <td class="border-2 border-rose-600 font-bold">Election Name</td>
                 <td class="border-2 border-rose-600 font-bold">Ballot(Question for voter)</td>
-                <td class="border-2 border-rose-600 font-bold">Edit</td>
-                <td class="border-2 border-rose-600 font-bold">Delete</td>
-                <td class="border-2 border-rose-600 font-bold">Launch Election</td>
+                <td class="border-2 border-rose-600 font-bold">Edit option</td>
+                <td class="border-2 border-rose-600 font-bold">Delete option </td>
+                
 
             </tr>
         
@@ -35,7 +35,7 @@
                 
                 
                 
-                <td class="border border-slate-500"><i class="bi bi-rocket-takeoff"></i></td>
+               
                 
                 
             </tr>
