--- a/views/ballot.ejs
+++ b/views/ballot.ejs
@@ -43,7 +43,7 @@
                             class="border border-blue-700 text-blue-900 rounded p-2 w-full">
                         </div>
                         <div class="py-3">
-                            <label for="description">Description:</label>
+                            <label for="description"> Details:</label>
                             <input type="text" name="details" 
                             class="border border-blue-700 text-blue-900 rounded p-2 w-full">
                         </div>
