--- a/views/ballot.ejs
+++ b/views/ballot.ejs
@@ -14,7 +14,7 @@
 
     <div class="grid grid-cols-6">
         <div class="col-start-2 p-6">
-            <a class='text-red-700 rounded-full border-2 p-2 bg-green-700 text-white' href="/dashboard">Dashboard</a>
+            <a class='text-red-700 rounded-full border-2 p-2 bg-green-700 text-white' href="/Mainpage">Home</a>
        
         </div>
         <div class="col-start-5 p-6">
@@ -24,7 +24,7 @@
     </div>
         <div class="grid grid-cols-4">
             <div class="col-start-2 col-span-2">
-                <h1>Questions for Voters</h1>
+                <h1> Election Questions for Vote Members</h1>
                 <h3>Election Name: <%=election.name %></h1>
                     <div>
                         <% if(messages && messages.error && messages.error.length > 0)  { %>
