--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: aquamarine;
-    color:rgb(240, 23, 23);
+    background-color: rgb(32, 159, 117);
+    color:rgb(37, 13, 13);
         font-family: 'Courier New', Courier, monospace;
         
 }
