--- a/views/Mainpage.ejs
+++ b/views/Mainpage.ejs
@@ -11,8 +11,10 @@
     </head>
     <body>
         <h1>
-          
+           
         </h1>
+        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a href="/signout" class="block px-10 text-white-600 rounded ">Sign out</a></button>
         <%- include('signout.ejs') %>
         <div class="grid grid-cols-4">
             <div class="col-start-2 col-span-2">
