--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,14 @@
 <h1 class="text-lg font-semibold text-blue-800">Online Voting Application</h1>
+    <div class="container flex flex-wrap items-center justify-between mx-auto">
+      <a href="/" class="flex items-center">
+        <h1 class="text-lg font-semibold text-blue-1000">Home</h1>
+      </a>
+      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+      <div class="flex md:order-2">
+        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a href="/signout" class="block px-10 text-white-600 rounded ">Sign out</a></button>
+        
+        </ul>
+      </div>
+    </div>
+  </nav>
