--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
         <p class="py-2">voting web application</p>
         <p class="py-2">Are you Using First Time? <a href="/signup" class="text-blue-800">Sign-up instant</a></p>
         <p class="py-2">Do you already have an account? <a href="/login" class="text-blue-800">Sign-in instant</a></p>
+        <%- include('footer.ejs') %>
       </div>
     </div>
   </body>
