--- a/views/ballot.ejs
+++ b/views/ballot.ejs
@@ -43,7 +43,7 @@
                             class="border border-blue-700 text-blue-900 rounded p-2 w-full">
                         </div>
                         <div class="py-3">
-                            <label for="description"> Details:</label>
+                            <label for="description">Question  Details:</label>
                             <input type="text" name="details" 
                             class="border border-blue-700 text-blue-900 rounded p-2 w-full">
                         </div>
@@ -51,7 +51,42 @@
                             <button type="submit" class="text-white bg-red-700 hover:bg-red-900 font-medium rounded px-5 py-2">Add New Election</button>
                         </div>
                     </form>
+                    <%
+                    if(election.Questionslists.length==0)
+                    {
+                    %>
+                    <p>You have not created any Question yet in this election.</p>
                    
+                    
+                    <%
+                    }
+                    else{ 
+                       %>
+                       <table class="table-auto border border-collapse border-slate-400 max-w-prose">
+                        <tr>
+                            <th class="border border-slate-300">S.No.</th>
+                            <th class="border border-slate-300">Question Title</th> 
+                            <th class="border border-slate-300">Details</th>
+                            <th class="border border-slate-300">Election ID NO.</th>
+
+                        </tr>
+                   
+                       <%
+                        for(let i = 0; i < election.Questionslists.length; i++) {
+                        %>
+                        <tr>
+                            <td class="border border-slate-500"><%=i+1%></td>
+                            <td class="border border-slate-500"><%=election.Questionslists[i].title%></td>
+                            <td class="border border-slate-500"><%=election.Questionslists[i].details%></td>
+                            <td class="border border-slate-500"><%=election.Questionslists[i].id%></td>
+                        </tr>
+                    <%
+                        }
+                    %>
+                       </table>
+                        <%
+                    }
+                    %>
                    
                       
                 </div>
