--- a/views/Mainpage.ejs
+++ b/views/Mainpage.ejs
@@ -6,19 +6,18 @@
     <meta name="csrf-token" content="<%= csrfToken %>">
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <link href="./css/styles.css" rel="stylesheet"> 
+    
     <title><%= title%></title>
     </head>
-    <body>
-        <h1>
-           
-        </h1>
-        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            <a href="/signout" class="block px-10 text-white-600 rounded ">Sign out</a></button>
-        <%- include('signout.ejs') %>
-        <div class="grid grid-cols-4">
+    <body style="background-color: rgba(190, 200, 200, 0.925);">
+        <%- include("header.ejs") %>
+        <h1 class="my-4 text-3xl font-bold leading-tight flex justify-center">
+            Main Page
+            </h1>
+        
+                <div class="grid grid-cols-4">
             <div class="col-start-2 col-span-2">
-                <h1 class="flex justify-center">Main Page</h1>
+                
                 <div>
                     <% if(messages && messages.error && messages.error.length > 0)  { %>
                         <% for(var i=0; i<messages.error.length; i++) { %>
@@ -33,7 +32,21 @@
                     <div class="py-3">
                         <label for="ele_Name">Add Election Name:</label>
                         <input type="text" name="ele_Name" 
-                        class="border border-yellow-700 text-yellow-900 rounded py-3 w-full">
+                        class="form-control
+                        block
+                        w-full
+                        px-3
+                        py-1.5
+                        text-base
+                        font-normal
+                        text-gray-700
+                        bg-white bg-clip-padding
+                        border border-solid border-gray-300
+                        rounded
+                        transition
+                        ease-in-out
+                        m-0
+                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="Enter Election Name">
                     </div>
                    
                     <div class="py-3">
