--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,14 +1,22 @@
-<h1 class="text-lg font-semibold text-blue-800">Online Voting Application</h1>
-    <div class="container flex flex-wrap items-center justify-between mx-auto">
-      <a href="/" class="flex items-center">
-        <h1 class="text-lg font-semibold text-blue-1000">Home</h1>
-      </a>
-      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
-      <div class="flex md:order-2">
-        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            <a href="/signout" class="block px-10 text-white-600 rounded ">Sign out</a></button>
-        
-        </ul>
-      </div>
-    </div>
-  </nav>
+
+ <h1 class="inline-block py-3 px-0 text-white-800 font-semibold no-underline">Online-Voting-Application</h1>
+<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
+  
+  <ul class="list-reset lg:flex justify-end flex-1 items-center">
+    
+    <li class="mr-3">
+      <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="/">Home</a>
+    </li>
+    <li class="mr-3">
+      <a class="inline-block text-black no-underline font-bold hover:text-gray-800 hover:text-underline py-2 px-4" href="/login">Login</a>
+    </li>
+    <li class="mr-3">
+      <a class="inline-block text-black no-underline hover:text-gray-800 font-bold hover:text-underline py-2 px-4" href="/sigout">SignOut</a>
+    </li>
+  </ul>
+  <button
+    id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
+  >
+    Contact
+  </button>
+</div>
