--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,7 @@
       <a class="inline-block text-black no-underline font-bold hover:text-gray-800 hover:text-underline py-2 px-4" href="/login">Login</a>
     </li>
     <li class="mr-3">
-      <a class="inline-block text-black no-underline hover:text-gray-800 font-bold hover:text-underline py-2 px-4" href="/sigout">SignOut</a>
+      <a class="inline-block text-black no-underline hover:text-gray-800 font-bold hover:text-underline py-2 px-4" href="/signout">SignOut</a>
     </li>
   </ul>
   <button
