--- a/views/count_elections.ejs
+++ b/views/count_elections.ejs
@@ -21,6 +21,8 @@
                 <th scope="col" class="px-6 py-3">Ballot(Question for voter)</th>
                 <th scope="col" class="px-6 py-3">Edit option</th>
                 <th scope="col" class="px-6 py-3">Delete option </th>
+                <th scope="col" class="px-6 py-3">Manage option </th>
+                <th scope="col" class="px-6 py-3">View option </th>
                 
 
             </tr>
@@ -35,6 +37,8 @@
                         <td class="px-6 py-4"><a href="/elections/<%= elections[i].id %>/ballot">click here</a></td>
                         <td class="px-6 py-4"><a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a></td>
                         <td class="px-6 py-4"><a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Delete</a></td>
+                        <td class="px-6 py-4"><a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Manage</a></td>
+                        <td class="px-6 py-4"><a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">View</a></td>
                 
                 
                 
